# qe-storage

./: .env  README.md  pyproject.toml  requirements.txt
env/: pyvenv.cfg
src/qe-storage/: Cloud.py  Database.py  Local.py  MongoDB.py  TinyDB.py  unit.py
src/qe_storage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: cloud-test.py  local-test.py  res.json
