[project]
name = "qe-storage"
version = "0.0.1"
authors = [
  { name="SamoySamoy", email="antalois23@gmail.com" },
]
description = "Store data using MongoDB and TinyDB"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SamoySamoy/qe-storage"
"Bug Tracker" = "https://github.com/SamoySamoy/qe-storage/issues"